--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.85801451494!2d121.09725672487173!3d14.55011093593026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c635009cc103%3A0x5803b7c9becf8a29!2sPalmdale%20Heights!5e0!3m2!1sen!2sph!4v1747312822664!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" class="d-block mx-md-auto"></iframe>
 			</div>
 			<div class="col-lg-6 mb-4">
-				<form class="container my-4" style="max-width: 500px;">
+				<form class="container my-4">
 				  <div class="mb-3">
 				    <label for="name" class="form-label">Name</label>
 				    <input type="name" class="form-control" id="name" name="name" required>
